After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 654857 - nautilus crashed with SIGSEGV in g_closure_invoke()
nautilus crashed with SIGSEGV in g_closure_invoke()
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Crashers
3.1.x
Other Linux
: Normal critical
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-07-18 16:24 UTC by Pedro Villavicencio
Modified: 2011-09-28 21:12 UTC
See Also:
GNOME target: ---
GNOME version: 3.1/3.2


Attachments
list-view: don't activate the previewer when there's no selection (1.04 KB, patch)
2011-09-28 21:12 UTC, Cosimo Cecchi
committed Details | Review

Description Pedro Villavicencio 2011-07-18 16:24:59 UTC
this report has been filed here:

https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/812015

"browsing through some SMB shares, copying a large file from SMB (remote system A) through system B (this) to remote system C (over SSH)."

".

Thread 1 (Thread 5341)

  • #0 nautilus_view_preview_files
    at nautilus-view.c line 1124
  • #1 preview_selected_items
    at nautilus-list-view.c line 244
  • #2 key_press_callback
    at nautilus-list-view.c line 1078
  • #3 _gtk_marshal_BOOLEAN__BOXED
    at /build/buildd/gtk+3.0-3.1.8/./gtk/gtkmarshalers.c line 85
  • #4 g_closure_invoke
    at /build/buildd/glib2.0-2.29.10/./gobject/gclosure.c line 773
  • #5 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.29.10/./gobject/gsignal.c line 3256
  • #6 g_signal_emit_valist
    at /build/buildd/glib2.0-2.29.10/./gobject/gsignal.c line 2997
  • #7 g_signal_emit
    at /build/buildd/glib2.0-2.29.10/./gobject/gsignal.c line 3044
  • #8 gtk_widget_event_internal
    at /build/buildd/gtk+3.0-3.1.8/./gtk/gtkwidget.c line 6105
  • #9 gtk_window_propagate_key_event
    at /build/buildd/gtk+3.0-3.1.8/./gtk/gtkwindow.c line 5807
  • #10 nautilus_window_key_press_event
    at nautilus-window.c line 1118
  • #11 _gtk_marshal_BOOLEAN__BOXED
    at /build/buildd/gtk+3.0-3.1.8/./gtk/gtkmarshalers.c line 85
  • #12 g_type_class_meta_marshal
    at /build/buildd/glib2.0-2.29.10/./gobject/gclosure.c line 884
  • #13 g_closure_invoke
    at /build/buildd/glib2.0-2.29.10/./gobject/gclosure.c line 773
  • #14 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.29.10/./gobject/gsignal.c line 3294
  • #15 g_signal_emit_valist
    at /build/buildd/glib2.0-2.29.10/./gobject/gsignal.c line 2997
  • #16 g_signal_emit
    at /build/buildd/glib2.0-2.29.10/./gobject/gsignal.c line 3044
  • #17 gtk_widget_event_internal
    at /build/buildd/gtk+3.0-3.1.8/./gtk/gtkwidget.c line 6105
  • #18 gtk_propagate_event
    at /build/buildd/gtk+3.0-3.1.8/./gtk/gtkmain.c line 2583
  • #19 gtk_main_do_event
    at /build/buildd/gtk+3.0-3.1.8/./gtk/gtkmain.c line 1879
  • #20 _gdk_event_emit
    at /build/buildd/gtk+3.0-3.1.8/./gdk/gdkevents.c line 71
  • #21 gdk_event_source_dispatch
    at /build/buildd/gtk+3.0-3.1.8/./gdk/x11/gdkeventsource.c line 360
  • #22 g_main_dispatch
    at /build/buildd/glib2.0-2.29.10/./glib/gmain.c line 2473
  • #23 g_main_context_dispatch
    at /build/buildd/glib2.0-2.29.10/./glib/gmain.c line 3046
  • #24 g_main_context_iterate
    at /build/buildd/glib2.0-2.29.10/./glib/gmain.c line 3124
  • #25 g_main_loop_run
    at /build/buildd/glib2.0-2.29.10/./glib/gmain.c line 3332
  • #26 gtk_main
    at /build/buildd/gtk+3.0-3.1.8/./gtk/gtkmain.c line 1362
  • #27 gtk_application_run_mainloop
    at /build/buildd/gtk+3.0-3.1.8/./gtk/gtkapplication.c line 112
  • #28 g_application_run
    at /build/buildd/glib2.0-2.29.10/./gio/gapplication.c line 1325
  • #29 main
    at nautilus-main.c line 102

Comment 1 Cosimo Cecchi 2011-09-28 21:11:56 UTC
The following fix has been pushed:
37386fa list-view: don't activate the previewer when there's no selection


Looks like we were trying to activate the previewer when there was no selection, leading to a NULL pointer dereference.
Comment 2 Cosimo Cecchi 2011-09-28 21:12:04 UTC
Created attachment 197711 [details] [review]
list-view: don't activate the previewer when there's no selection

Or we'll segfault when trying to access the first item of the selection.