list-view: don't activate the previewer when there's no selection

Or we'll segfault when trying to access the first item of the selection.

https://bugzilla.gnome.org/show_bug.cgi?id=654857