src/nautilus-list-view.c
@@ -240,9 +240,11 @@ preview_selected_items (NautilusListView *view)
 	
 	file_list = nautilus_list_view_get_selection (NAUTILUS_VIEW (view));
 
-	nautilus_view_preview_files (NAUTILUS_VIEW (view),
-				     file_list, NULL);
-	nautilus_file_list_free (file_list);
+	if (file_list != NULL) {
+		nautilus_view_preview_files (NAUTILUS_VIEW (view),
+					     file_list, NULL);
+		nautilus_file_list_free (file_list);
+	}
 }
 
 static void
